# QR-Code-Gen

./: .gitignore  CMakeLists.txt  Makefile
include/: Screen.hpp  calc_version.hpp  gen.hpp  test.hpp  util.hpp
src/: Screen.cpp  calc_version.cpp  gen.cpp  main.cpp
